fix: make several blocks

--- a/index.html
+++ b/index.html
@@ -12,46 +12,97 @@
 
 <body>
     <header class="header-container">
-        <div>
+        <div class="container">
             <img src="assets/img/Logo.png" alt="Logo">
-            <ul>
-                <li><a href="#visiting">Visiting</a></li>
-                <li>Explore</li>
-                <li>Video</li>
-                <li>Tickets</li>
-                <li>Contacts</li>
-            </ul>
-
+            <nav>
+                <ul>
+                    <li><a href="#visiting">Visiting</a></li>
+                    <li><a href="#explore">Explore</a></li>
+                    <li><a href="#video">Video</a></li>
+                    <li><a href="#tickets">Tickets</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
+                </ul>
+            </nav>
         </div>
-
     </header>
     <main>
-        <section class="section">
+        <section class="section welcome-section">
             <div class="container">
-
+                <h1>Welcome to the Louvre</h1>
+                <p>From the castle to the museum</p>
+                <img src="assets/img/background.jpg">
             </div>
         </section>
         <section class="section visiting-section" id="visiting">
-            <div class=" container ">
+            <div class="container-visiting">
+                <p>Virtual Tour</p>
+                <hr>
+                <div class="container-tour">
+                    <div id="royal-palace" class="tour">
+                        <img src="assets/img/Royal Palace.jpg" alt="Royal Palace">
+                        <p>Royal Palace</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                    <div id="denon-wing" class="tour">
+                        <img src="assets/img/Denon Wing.jpg" alt="Denon Wing">
+                        <p>Denon Wing</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                    <div id="colonnade-perrault" class="tour">
+                        <img src="assets/img/Colonnade Perrault.jpg" alt="Colonnade Perrault">
+                        <p>Colonnade Perrault</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                    <div id="greek-hall" class="tour">
+                        <img src="assets/img/Greek Hall.jpg" alt="Greek Hall">
+                        <p>Greek Hall</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                    <div id="mona-lisa" class="tour">
+                        <img src="assets/img/Mona Lisa.jpg" alt="Mona Lisa">
+                        <p>Mona Lisa</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                    <div id="night-palace" class="tour">
+                        <img src="assets/img/Night Palace.jpg" alt="Night Palace">
+                        <p>Night Palace</p>
+                        <hr>
+                        <p>360 Virtual Tour <br> Google Street Panorama View</p>
+                    </div>
+                </div>
 
             </div>
         </section>
-        <section class="section ">
+        <section class="section explore-section" id="explore">
+            <div class="container ">
+                <div class="explore-text">
+                    <p>Picture Explore</p>
+                    <hr>
+                    <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p>
+                    <p>It was cleaned in 1984 to remove a "yellow veil" of dust that had gathered since the previous restoration in the 19th century.</p>
+                    <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
+                </div>
+                <div class="explore-picture">
+                    <img src="assets/img/Picture Explore1.png" alt="Picture 1">
+                </div>
+            </div>
+        </section>
+        <section class="section video-section" id="video">
+            <div class="container ">
+                <video src="assets/video/video.mp4" poster="assets/video/poster.jpg" controls></video>
+            </div>
+        </section>
+        <section class="section tickets-section" id="tickets">
             <div class="container ">
 
             </div>
         </section>
-        <section class="section ">
-            <div class="container ">
-
-            </div>
-        </section>
-        <section class="section ">
-            <div class="container ">
-
-            </div>
-        </section>
-        <section class="section ">
+        <section class="section contacts-section" id="contacts">
             <div class="container ">
 
             </div>
